--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 </head>
 <body class="mat-typography">
   <app-root></app-root>
+  <!-- <app-footer></app-footer> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.0/js/bootstrap.min.js" integrity="sha512-8Y8eGK92dzouwpROIppwr+0kPauu0qqtnzZZNEF8Pat5tuRNJxJXCkbQfJ0HlUG3y1HB3z18CSKmUo7i2zcPpg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 </html>
